--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fizik Video Platformu</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
@@ -22,19 +21,20 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content" data-aos="fade-up">
-            <h1 class="hero-title">Fizik Öğrenmek Hiç Bu Kadar <span class="gradient-text">Eğlenceli</span> Olmamıştı!</h1>
-            <p class="hero-description">9. sınıf fizik müfredatını interaktif videolarla keşfet. Üniteleri kolayca anla, soruları çöz, fizikte uzmanlaş!</p>
+            <h1 class="hero-title">
+                Fizik Öğrenmek Hiç Bu Kadar <span class="gradient-text">Eğlenceli</span> Olmamıştı!
+            </h1>
+            <p class="hero-description">
+                9. sınıf fizik müfredatını interaktif videolarla keşfet. Üniteleri kolayca anla, soruları çöz, fizikte uzmanlaş!
+            </p>
             <div class="hero-buttons">
                 <a href="unite-list.html" class="btn btn-primary">
-                    <span class="btn-icon">🚀</span>
-                    Hemen Başla
+                    <span class="btn-icon">🚀</span> Hemen Başla
                 </a>
                 <a href="#featured" class="btn btn-secondary">
-                    <span class="btn-icon">📺</span>
-                    Videoları Keşfet
+                    <span class="btn-icon">📺</span> Videoları Keşfet
                 </a>
             </div>
         </div>
@@ -54,7 +54,6 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
     <section class="stats">
         <div class="container">
             <div class="stats-grid">
@@ -74,39 +73,35 @@
         </div>
     </section>
 
-    <!-- Featured Videos -->
     <section id="featured" class="featured-videos">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Öne Çıkan Videolar</h2>
-            <div class="videos-grid" id="featured-videos-container">
-                <!-- JavaScript ile doldurulacak -->
-            </div>
+            <div class="videos-grid" id="featured-videos-container"></div>
         </div>
     </section>
 
-<!-- Features -->
-<section class="features">
-    <div class="container">
-        <h2 class="section-title" data-aos="fade-up">Neden Biz?</h2>
-        <div class="features-grid">
-            <div class="feature-card" data-aos="fade-up">
-                <div class="feature-icon">🎓</div>
-                <h3>Uzman Eğitmenler</h3>
-                <p>Alanında uzman fizik öğretmenleri tarafından hazırlanan içerikler</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="feature-icon">🖥️</div>
-                <h3>Akıllı Tahta & Bilgisayar Uyumlu</h3>
-                <p>Akıllı tahtalarda ve bilgisayarlarda tam ekran, yüksek çözünürlüklü deneyim</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="feature-icon">⚡</div>
-                <h3>Hızlı Öğrenme</h3>
-                <p>Konsantre videolarla kısa sürede maksimum öğrenme</p>
+    <section class="features">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Neden Biz?</h2>
+            <div class="features-grid">
+                <div class="feature-card" data-aos="fade-up">
+                    <div class="feature-icon">🎓</div>
+                    <h3>Uzman Eğitmenler</h3>
+                    <p>Alanında uzman fizik öğretmenleri tarafından hazırlanan içerikler</p>
+                </div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="feature-icon">🖥️</div>
+                    <h3>Akıllı Tahta & Bilgisayar Uyumlu</h3>
+                    <p>Akıllı tahtalarda ve bilgisayarlarda tam ekran, yüksek çözünürlüklü deneyim</p>
+                </div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Hızlı Öğrenme</h3>
+                    <p>Konsantre videolarla kısa sürede maksimum öğrenme</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
@@ -115,5 +110,4 @@
         loadFeaturedVideos();
     </script>
 </body>
-
 </html>
