--- a/video-player.html
+++ b/video-player.html
@@ -41,6 +41,7 @@
                         <div class="video-meta">
                             <span class="meta-item" id="video-duration">⏱️ 00:00</span>
                             <span class="meta-item" id="video-unit">📚 Ünite</span>
+                            <span class="meta-item" id="video-views">👁️ 0 izlenme</span>
                         </div>
                         <p class="video-description" id="video-desc">Video açıklaması...</p>
                     </div>
@@ -63,3 +64,4 @@
 </body>
 
 </html>
+
