--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
         </div>
     </nav>
 
+    <!-- İstatistik Bölümü En Üste Taşındı -->
+    <section class="stats">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-item" data-aos="fade-up">
+                    <div class="stat-number">10+</div>
+                    <div class="stat-label">Eğitim Videosu</div>
+                </div>
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="100">
+                    <div class="stat-number">6</div>
+                    <div class="stat-label">Fizik Ünitesi</div>
+                </div>
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
+                    <div class="stat-number">28</div>
+                    <div class="stat-label">Mutlu Öğrenci</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="hero">
         <div class="hero-content" data-aos="fade-up">
             <h1 class="hero-title">Fizik Öğrenmek Hiç Bu Kadar <span class="gradient-text">Eğlenceli</span> Olmamıştı!</h1>
@@ -52,55 +72,37 @@
         </div>
     </section>
 
-    <section class="stats">
-        <div class="container">
-            <div class="stats-grid">
-                <div class="stat-item" data-aos="fade-up">
-                    <div class="stat-number">10+</div>
-                    <div class="stat-label">Eğitim Videosu</div>
-                </div>
-                <div class="stat-item" data-aos="fade-up" data-aos-delay="100">
-                    <div class="stat-number">6</div>
-                    <div class="stat-label">Fizik Ünitesi</div>
-                </div>
-                <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
-                    <div class="stat-number">28</div>
-                    <div class="stat-label">Mutlu Öğrenci</div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section id="featured" class="featured-videos">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Öne Çıkan Videolar</h2>
             <div class="videos-grid" id="featured-videos-container">
+                <!-- Videolar buraya dinamik olarak yüklenecek -->
             </div>
         </div>
     </section>
 
-<section class="features">
-    <div class="container">
-        <h2 class="section-title" data-aos="fade-up">Neden Biz?</h2>
-        <div class="features-grid">
-            <div class="feature-card" data-aos="fade-up">
-                <div class="feature-icon">🎓</div>
-                <h3>Uzman Eğitmenler</h3>
-                <p>Alanında uzman fizik öğretmenleri tarafından hazırlanan içerikler</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="feature-icon">🖥️</div>
-                <h3>Akıllı Tahta & Bilgisayar Uyumlu</h3>
-                <p>Akıllı tahtalarda ve bilgisayarlarda tam ekran, yüksek çözünürlüklü deneyim</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="feature-icon">⚡</div>
-                <h3>Hızlı Öğrenme</h3>
-                <p>Konsantre videolarla kısa sürede maksimum öğrenme</p>
+    <section class="features">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Neden Biz?</h2>
+            <div class="features-grid">
+                <div class="feature-card" data-aos="fade-up">
+                    <div class="feature-icon">🎓</div>
+                    <h3>Uzman Eğitmenler</h3>
+                    <p>Alanında uzman fizik öğretmenleri tarafından hazırlanan içerikler</p>
+                </div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="feature-icon">🖥️</div>
+                    <h3>Akıllı Tahta & Bilgisayar Uyumlu</h3>
+                    <p>Akıllı tahtalarda ve bilgisayarlarda tam ekran, yüksek çözünürlüklü deneyim</p>
+                </div>
+                <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Hızlı Öğrenme</h3>
+                    <p>Konsantre videolarla kısa sürede maksimum öğrenme</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
@@ -109,7 +111,4 @@
         loadFeaturedVideos();
     </script>
 </body>
-
 </html>
-
-
