--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item" data-aos="fade-up">
-                    <div class="stat-number">10+</div>
+                    <div class="stat-number">11</div>
                     <div class="stat-label">Eğitim Videosu</div>
                 </div>
                 <div class="stat-item" data-aos="fade-up" data-aos-delay="100">
@@ -72,4 +72,5 @@
     </script>
 </body>
 </html>
+
 
