--- a/unite-list.html
+++ b/unite-list.html
@@ -27,7 +27,9 @@
             <p data-aos="fade-up" data-aos-delay="100">9. sınıf fizik müfredatının tüm ünitelerini keşfet</p>
         </div>
     </section>
-            
+
+    <section class="units-section">
+        <div class="container">
             <div class="units-container" id="units-container">
                 <!-- JavaScript ile doldurulacak -->
             </div>
@@ -41,5 +43,4 @@
         loadAllUnits();
     </script>
 </body>
-
 </html>
