--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         </div>
     </nav>
     
+    <!-- Öne Çıkan Videolar Bölümü Eklendi -->
+    <section class="videos-section">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Öne Çıkan Videolar</h2>
+            <div class="videos-grid" id="featured-videos-container">
+                <!-- JavaScript ile doldurulacak -->
+            </div>
+        </div>
+    </section>
+
     <section class="features">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Neden Biz?</h2>
@@ -52,6 +62,3 @@
     </script>
 </body>
 </html>
-
-
-
