--- a/unite-list.html
+++ b/unite-list.html
@@ -30,6 +30,7 @@
 
     <section class="units-section">
         <div class="container">
+            <!-- Arama çubuğu buradan kaldırıldı -->
             <div class="units-container" id="units-container">
                 <!-- JavaScript ile doldurulacak -->
             </div>
